kubernetes/ingress/canary-ingress.yaml
# canary-ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: react-app.internal
    http:
      paths:
      - pathType: Prefix
        path: /v1
        backend:
          service:
            name: react-app-service-v1
            port:
              number: 8080
